--- a/src/styles/components/_box-layout.scss
+++ b/src/styles/components/_box-layout.scss
@@ -5,14 +5,17 @@
     display: flex;
     height: 100vh;
     justify-content: center;
-    overflow:hidden;
+    overflow: hidden;
     width: 100vw;
 }
 
 .box-layout__box{
+    align-items: center;
     background-color: fade-out($skyblue, .7);
     border-radius: 3px;
-    height: 50rem;
+    display: flex;
+    flex-direction: column;
+    height: 55rem;
     padding: $l-size $m-size;
     text-align: center;
     width: 50rem;
